--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@material/dom": "^14.0.0",
 		"@material/typography": "^14.0.0",
+		"@mdi/js": "^7.3.67",
 		"@smui/button": "^7.0.0-beta.15",
 		"@smui/card": "^7.0.0-beta.15",
 		"@smui/data-table": "^7.0.0-beta.15",
