--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"axios": "^1.5.1",
+		"layercake": "^8.0.2",
 		"marked": "^9.1.2",
 		"material": "^0.5.3",
 		"smui-theme": "^7.0.0-beta.15",
